Update sentry to 4.0